--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
 
-    <title>aa</title>
+    <title>Cats !!!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="animation.css">
 
