--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cats !!!</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="animation.css">
@@ -183,20 +183,20 @@
             <img src="img/nerdy2.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Kakyoin (Jojo)</h2>
+            <h2>Actually</h2>
             <img src="img/nerdy3.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Cat raze</h2>
-            <img src="img/nerdy1.jpg" alt="maya">
+            <h2>Gamerzz</h2>
+            <img src="img/nerdy4.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Kakyoin (Jojo)</h2>
-            <img src="img/nerdy2.jpg" alt="maya">
+            <h2>La playlist ^^ banger  </h2>
+            <img src="img/nerdy5.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Kakyoin (Jojo)</h2>
-            <img src="img/nerdy3.jpg" alt="maya">
+            <h2>Whoop whoop on relate ici</h2>
+            <img src="img/nerdy6.jpg" alt="maya">
           </div>
         </div>
       </div>
@@ -205,24 +205,25 @@
         <h2 class="titlequality" id="titlequality6">Kind 🌼</h2>
         <div class="bigilludiv">
           <div class="illustration">
-            <h2>Maya</h2>
+            <h2>Give</h2>
             <img src="img/kind1.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>pipou</h2>
+            <h2>Care</h2>
             <img src="img/kind2.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind3.jpg" alt="maya">
+            <img src="img/kind3.jpeg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind4.jpg" alt="maya">
+            <img src="img/kind4.jpeg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind3.jpg" alt="maya">
+            <img src="img/kind5.jpeg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind4.jpg" alt="maya">
+            <h2>Trans ally</h2>
+            <img src="img/kind6.jpeg" alt="maya">
           </div>
         </div>
       </div>
