--- a/index.html
+++ b/index.html
@@ -114,31 +114,28 @@
       </div>
 
       <div class="qualitydiv">
-        <h2 class="titlequality" id="titlequality3">Queer 🏳️‍🌈</h2>
+        <h2 class="titlequality" id="titlequality3">Kind 🌼</h2>
         <div class="bigilludiv">
           <div class="illustration">
-            <h2>Aime les femmes</h2>
-            <img src="img/queer1.jpg" alt="maya">
+            <h2>Give</h2>
+            <img src="img/kind1.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Toi !</h2>
-            <img src="img/queer2.jpg" alt="maya">
+            <h2>Care</h2>
+            <img src="img/kind2.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Big Ally !</h2>
-            <img src="img/queer3.jpg" alt="maya">
+            <img src="img/kind3.jpeg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Queer</h2>
-            <img src="img/queer4.jpg" alt="maya">
+            <img src="img/kind4.jpeg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Aime les hommes</h2>
-            <img src="img/queer6.jpg" alt="maya">
+            <img src="img/kind5.jpeg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Aime 💖</h2>
-            <img src="img/queer5.jpg" alt="maya">
+            <h2>Trans ally</h2>
+            <img src="img/kind6.jpeg" alt="maya">
           </div>
         </div>
       </div>
@@ -202,31 +199,36 @@
       </div>
 
       <div class="qualitydiv">
-        <h2 class="titlequality" id="titlequality6">Kind 🌼</h2>
+        <h2 class="titlequality" id="titlequality6">Queer 🏳️‍🌈</h2>
         <div class="bigilludiv">
           <div class="illustration">
-            <h2>Give</h2>
-            <img src="img/kind1.jpg" alt="maya">
+            <h2>Love women</h2>
+            <img src="img/queer1.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Care</h2>
-            <img src="img/kind2.jpg" alt="maya">
+            <h2>Toi !</h2>
+            <img src="img/queer2.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind3.jpeg" alt="maya">
+            <h2>Big Ally !</h2>
+            <img src="img/queer3.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind4.jpeg" alt="maya">
+            <h2>Queer</h2>
+            <img src="img/queer4.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <img src="img/kind5.jpeg" alt="maya">
+            <h2>Love men</h2>
+            <img src="img/queer6.jpg" alt="maya">
           </div>
           <div class="illustration">
-            <h2>Trans ally</h2>
-            <img src="img/kind6.jpeg" alt="maya">
+            <h2>Love people 💖</h2>
+            <img src="img/queer5.jpg" alt="maya">
           </div>
         </div>
       </div>
+
+
 
       <h2 class="arrowbottom" id="scrollbottom">⬇️</h2>
       <h2 class="see" data-text="Test">Test</h2>
