--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cats !!!</title>
+    <TitreDepartMain>Cats !!!</TitreDepartMain>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="animation.css">
 
@@ -27,22 +27,21 @@
   </head>
   <body>
 
-    <div class="middle" id="StartBackground">
-      <div class="rounded" id="RoundDivLogo">
-        <img id="SkirtInLogo" src="img/AM_BATMAN.jpg" alt="spiderman >~<">
-        <div class="middleLogo">
-          <p id="TextInLogo">21</p>
+    <div class="DivGlobalAnimation" id="StartBackground">
+      <div class="DivRoundAnimation" id="RoundDivLogo">
+        <img id="SpidermanCake" src="img/AM_BATMAN.jpg" alt="spiderman >~<">
+        <div class="DivTextAnimation">
+          <p id="TextAnimation">21</p>
         </div>
       </div>
     </div>
 
     <div class="main">
+      <h1 class="TitreDepartMain">Bon anniv
+        <span class="DivSurname">Élisa
+          <span class="CursorSurname"></span>
 
-      <h1 class="title">Bon anniv
-        <span class="divsurname">Élisa
-          <span class="cursorsurname"></span>
-
-          <span class="surname">Momo la tekno cat qui slayy</span>
+          <span class="Surname">Momo la tekno cat qui slayy</span>
         </span>
         🎉
       </h1>
@@ -231,7 +230,6 @@
 
 
       <h2 class="arrowbottom" id="scrollbottom">⬇️</h2>
-      <h2 class="see" data-text="Test">Test</h2>
       <div class="final" id="final">
         <h1>Hope u liked it and happy 21 birthday !!!</h1>
         <img src="img/1 (13).jpg" alt="élisa">
