--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <TitreDepartMain>Cats !!!</TitreDepartMain>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="animation.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cats !!!</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="animation.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Concert+One&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <div class="DivGlobalAnimation" id="StartBackground">
       <div class="DivRoundAnimation" id="RoundDivLogo">
-        <img id="SpidermanCake" src="img/AM_BATMAN.jpg" alt="spiderman >~<">
+        <img id="SpidermanCake" src="img/AM_BATMAN.jpg" alt="spiderman >~<" />
         <div class="DivTextAnimation">
           <p id="TextAnimation">21</p>
         </div>
@@ -37,47 +39,48 @@
     </div>
 
     <div class="main">
-      <h1 class="TitreDepartMain">Bon anniv
-        <span class="DivSurname">Élisa
-          <span class="CursorSurname"></span>
+      <div class="mainTitle">
+        <h1 class="TitreDepartMain">Bon anniv</h1>
+        <div class="DivSurnameGlobal">
+          <h1 class="DivSurname">Élisa</h1>
+          <hr class="CursorSurname" />
+          <p class="Surname">Momo la tekno cat qui slayy</p>
+        </div>
+        <h1 class="TitreDepartMain">🎉</h1>
+      </div>
 
-          <span class="Surname">Momo la tekno cat qui slayy</span>
-        </span>
-        🎉
-      </h1>
       <div class="imagesNumbers">
-        <img src="img/cat_2.png" alt="cat 1">
-        <img src="img/cat_1.png" alt="cat 1">
+        <img src="img/cat_2.png" alt="cat 1" />
+        <img src="img/cat_1.png" alt="cat 1" />
       </div>
       <div id="numberDiv">21 ans 💄</div>
 
       <div class="qualitydiv">
-        <h2 class="titlequality" id="titlequality1">Cat Loveur
-          🐾🎀</h2>
+        <h2 class="titlequality" id="titlequality1">Cat Loveur 🐾🎀</h2>
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Maya</h2>
-            <img src="img/12.jpg" alt="maya">
+            <img src="img/12.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>pipou</h2>
-            <img src="img/1 (10).jpg" alt="maya">
+            <img src="img/1 (10).jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Boingo (de jojo)</h2>
-            <img src="img/1 (1).jpg" alt="maya">
+            <img src="img/1 (1).jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Ikéa</h2>
-            <img src="img/1 (5).jpg" alt="maya">
+            <img src="img/1 (5).jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Pilou</h2>
-            <img src="img/1 (18).jpg" alt="maya">
+            <img src="img/1 (18).jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Yuki le chat 🤫</h2>
-            <img src="img/1 (2).jpg" alt="maya">
+            <img src="img/1 (2).jpg" alt="maya" />
           </div>
         </div>
       </div>
@@ -87,27 +90,27 @@
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Cute</h2>
-            <img src="img/stylish1.jpg" alt="maya">
+            <img src="img/stylish1.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Toi !</h2>
-            <img src="img/stylish2.jpg" alt="maya">
+            <img src="img/stylish2.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Comfy</h2>
-            <img src="img/stylish3.jpg" alt="maya">
+            <img src="img/stylish3.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Toi encore !!</h2>
-            <img src="img/stylish4.jpg" alt="maya">
+            <img src="img/stylish4.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Classy</h2>
-            <img src="img/stylish5.jpg" alt="maya">
+            <img src="img/stylish5.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Cool</h2>
-            <img src="img/stylish6.jpg" alt="maya">
+            <img src="img/stylish6.jpg" alt="maya" />
           </div>
         </div>
       </div>
@@ -117,24 +120,24 @@
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Give</h2>
-            <img src="img/kind1.jpg" alt="maya">
+            <img src="img/kind1.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Care</h2>
-            <img src="img/kind2.jpg" alt="maya">
+            <img src="img/kind2.jpg" alt="maya" />
           </div>
           <div class="illustration">
-            <img src="img/kind3.jpeg" alt="maya">
+            <img src="img/kind3.jpeg" alt="maya" />
           </div>
           <div class="illustration">
-            <img src="img/kind4.jpeg" alt="maya">
+            <img src="img/kind4.jpeg" alt="maya" />
           </div>
           <div class="illustration">
-            <img src="img/kind5.jpeg" alt="maya">
+            <img src="img/kind5.jpeg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Trans ally</h2>
-            <img src="img/kind6.jpeg" alt="maya">
+            <img src="img/kind6.jpeg" alt="maya" />
           </div>
         </div>
       </div>
@@ -144,25 +147,25 @@
         <div class="bigilludiv">
           <div class="illustration">
             <h2>>~<</h2>
-            <img src="img/shy1.gif" alt="maya">
+            <img src="img/shy1.gif" alt="maya" />
           </div>
           <div class="illustration">
-            <img src="img/shy2.jpg" alt="maya">
+            <img src="img/shy2.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>(⸝⸝⸝O﹏ O⸝⸝⸝)</h2>
-            <img src="img/shy3.jpg" alt="maya">
+            <img src="img/shy3.jpg" alt="maya" />
           </div>
           <div class="illustration">
-            <img src="img/shy4.jpg" alt="maya">
+            <img src="img/shy4.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Cutesy</h2>
-            <img src="img/shy5.jpg" alt="maya">
+            <img src="img/shy5.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Yuki le chat 🤫</h2>
-            <img src="img/shy6.jpg" alt="maya">
+            <img src="img/shy6.jpg" alt="maya" />
           </div>
         </div>
       </div>
@@ -172,27 +175,27 @@
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Cat raze</h2>
-            <img src="img/nerdy1.jpg" alt="maya">
+            <img src="img/nerdy1.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Kakyoin (Jojo)</h2>
-            <img src="img/nerdy2.jpg" alt="maya">
+            <img src="img/nerdy2.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Actually</h2>
-            <img src="img/nerdy3.jpg" alt="maya">
+            <img src="img/nerdy3.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Gamerzz</h2>
-            <img src="img/nerdy4.jpg" alt="maya">
+            <img src="img/nerdy4.jpg" alt="maya" />
           </div>
           <div class="illustration">
-            <h2>La playlist ^^ banger  </h2>
-            <img src="img/nerdy5.jpg" alt="maya">
+            <h2>La playlist ^^ banger</h2>
+            <img src="img/nerdy5.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Whoop whoop on relate ici</h2>
-            <img src="img/nerdy6.jpg" alt="maya">
+            <img src="img/nerdy6.jpg" alt="maya" />
           </div>
         </div>
       </div>
@@ -202,37 +205,35 @@
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Love women</h2>
-            <img src="img/queer1.jpg" alt="maya">
+            <img src="img/queer1.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Toi !</h2>
-            <img src="img/queer2.jpg" alt="maya">
+            <img src="img/queer2.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Big Ally !</h2>
-            <img src="img/queer3.jpg" alt="maya">
+            <img src="img/queer3.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Queer</h2>
-            <img src="img/queer4.jpg" alt="maya">
+            <img src="img/queer4.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Love men</h2>
-            <img src="img/queer6.jpg" alt="maya">
+            <img src="img/queer6.jpg" alt="maya" />
           </div>
           <div class="illustration">
             <h2>Love people 💖</h2>
-            <img src="img/queer5.jpg" alt="maya">
+            <img src="img/queer5.jpg" alt="maya" />
           </div>
         </div>
       </div>
 
-
-
       <h2 class="arrowbottom" id="scrollbottom">⬇️</h2>
       <div class="final" id="final">
         <h1>Hope u liked it and happy 21 birthday !!!</h1>
-        <img src="img/1 (13).jpg" alt="élisa">
+        <img src="img/1 (13).jpg" alt="élisa" />
       </div>
     </div>
 
