--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Concert+One&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
   </head>
   <body>
     <div class="DivGlobalAnimation" id="StartBackground">
@@ -171,37 +168,7 @@
       </div>
 
       <div class="qualitydiv">
-        <h2 class="titlequality" id="titlequality5">Nerdy 🎮🎧</h2>
-        <div class="bigilludiv">
-          <div class="illustration">
-            <h2>Cat raze</h2>
-            <img src="img/nerdy1.jpg" alt="maya" />
-          </div>
-          <div class="illustration">
-            <h2>Kakyoin (Jojo)</h2>
-            <img src="img/nerdy2.jpg" alt="maya" />
-          </div>
-          <div class="illustration">
-            <h2>Actually</h2>
-            <img src="img/nerdy3.jpg" alt="maya" />
-          </div>
-          <div class="illustration">
-            <h2>Gamerzz</h2>
-            <img src="img/nerdy4.jpg" alt="maya" />
-          </div>
-          <div class="illustration">
-            <h2>La playlist ^^ banger</h2>
-            <img src="img/nerdy5.jpg" alt="maya" />
-          </div>
-          <div class="illustration">
-            <h2>Whoop whoop on relate ici</h2>
-            <img src="img/nerdy6.jpg" alt="maya" />
-          </div>
-        </div>
-      </div>
-
-      <div class="qualitydiv">
-        <h2 class="titlequality" id="titlequality6">Queer 🏳️‍🌈</h2>
+        <h2 class="titlequality" id="titlequality5">Queer 🏳️‍🌈</h2>
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Love women</h2>
@@ -226,6 +193,36 @@
           <div class="illustration">
             <h2>Love people 💖</h2>
             <img src="img/queer5.jpg" alt="maya" />
+          </div>
+        </div>
+      </div>
+
+      <div class="qualitydiv">
+        <h2 class="titlequality" id="titlequality6">Nerdy 🎮🎧</h2>
+        <div class="bigilludiv">
+          <div class="illustration">
+            <h2>Cat raze</h2>
+            <img src="img/nerdy1.jpg" alt="maya" />
+          </div>
+          <div class="illustration">
+            <h2>Kakyoin (Jojo)</h2>
+            <img src="img/nerdy2.jpg" alt="maya" />
+          </div>
+          <div class="illustration">
+            <h2>Actually</h2>
+            <img src="img/nerdy3.jpg" alt="maya" />
+          </div>
+          <div class="illustration">
+            <h2>Gamerzz</h2>
+            <img src="img/nerdy4.jpg" alt="maya" />
+          </div>
+          <div class="illustration">
+            <h2>La playlist ^^ banger</h2>
+            <img src="img/nerdy5.jpg" alt="maya" />
+          </div>
+          <div class="illustration">
+            <h2>Whoop whoop on relate ici</h2>
+            <img src="img/nerdy6.jpg" alt="maya" />
           </div>
         </div>
       </div>
