--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div id="numberDiv">21 ans 💄</div>
 
       <div class="qualitydiv">
-        <h2 class="titlequality" id="titlequality1">Cat Loveur 🐾🎀</h2>
+        <h2 class="titlequality" id="titlequality1">Cat Loveur 🐾🎀 <div><span class="click"></span><img src="img/cursor.png" alt="Cursor"></div></h2>
         <div class="bigilludiv">
           <div class="illustration">
             <h2>Maya</h2>
